# deno_rust_wasm

./: .gitignore  README.md  app.ts  handlers.ts
rwasm/: Cargo.toml
rwasm/src/: lib.rs
